--- a/apps/front/static/sass/_modules.scss
+++ b/apps/front/static/sass/_modules.scss
@@ -66,7 +66,7 @@ $color-search-background: #E1E5E8;
 // to use a relative position and clear afterwards
 .date {
     position: absolute;
-    float: left;
+    left: 0.5rem;
 
     .day, .month {
         font-family: $font-title;
